--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="20dp"
         >
@@ -57,11 +57,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Playing Music" />
-        <ProgressBar
-            android:id="@+id/progress_music"
+        <TextView
+            android:id="@+id/textTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="invisible"/>
+            android:text="Playing Time: "/>
+
+        <SeekBar
+            android:id="@+id/progress_music"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
         </LinearLayout>
 
 </LinearLayout>
